Improve horizontal scroll fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,14 @@ html {
     --dark-background-color: #686690;
 
     scroll-padding-top: calc(var(--header-height) - 2rem);
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
     min-height: 100vh;
+    max-width: 100%;
+    overflow-x: hidden;
     background-color: var(--background-color);
     color: var(--primary-color);
     font-family: 'Cabin', sans-serif;
@@ -23,8 +27,6 @@ main,
 form {
     display: flex;
     flex-flow: column;
-    max-width: 100vw;
-    overflow-x: hidden;
 }
 
 /*
